--- a/kinomart/user/templates/user/user_address.html
+++ b/kinomart/user/templates/user/user_address.html
@@ -32,11 +32,11 @@
         <div class="col-md-3 bg-light">
             <h3>Hello {{user.first_name}}</h3>
             <ul class="list-group">
-                <li class="list-group-item"><a href="#">Edit Profile</a></li>
-                <li class="list-group-item"><a href="#">Shopping Address</a></li>
-                <li class="list-group-item"><a href="#">Order History</a></li>
-                <li class="list-group-item"><a href="#">My Wishlist</a></li>
-                <li class="list-group-item"><a href="#">Wallet</a></li>
+                <li class="list-group-item"><a href="{% url 'user_page' %}">Profile</a></li>
+                <li class="list-group-item"><a href="{% url 'user_address' %}">Shopping Address</a></li>
+                <li class="list-group-item"><a href="{% url 'order_history' %}">Order History</a></li>
+                <li class="list-group-item"><a href="{% url 'wishlist' %}">My Wishlist</a></li>
+                <li class="list-group-item"><a href="{% url 'wallet' %}">Wallet</a></li>
                 <li class="list-group-item"><a href="{% url 'logout_user' %}">Log Out</a></li>
             </ul>
         </div>
