--- a/kinomart/user/templates/user/theme.html
+++ b/kinomart/user/templates/user/theme.html
@@ -92,9 +92,9 @@
                         </div>
                         <div class="d-flex m-3 me-0">
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                            <a href="#" class="position-relative me-4 my-auto">
+                            <a href="{% url 'cart' %}" class="position-relative me-4 my-auto">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
-                                <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
+                                <span class="cart-count position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;" ></span>
                             </a>
                             <a href="{% url 'user_page' %}" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
@@ -242,7 +242,25 @@
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
 
+<script>
+    $(document).ready(function() {
+        updateCartCount();
 
+    });
+
+
+    function updateCartCount() {
+    // AJAX request to get the cart count
+    $.ajax({
+        url: "{% url 'cart_count' %}",
+        type: "GET",
+        success: function(response) {
+            // Update the count on the page
+            $(".cart-count").text(response.count);
+        }
+    });
+}
+</script>
 
 
     {% block scripts %}
