--- a/kinomart/user/templates/user/user_address.html
+++ b/kinomart/user/templates/user/user_address.html
@@ -36,6 +36,7 @@
                 <li class="list-group-item"><a href="{% url 'user_address' %}">Shopping Address</a></li>
                 <li class="list-group-item"><a href="{% url 'order_history' %}">Order History</a></li>
                 <li class="list-group-item"><a href="{% url 'wishlist' %}">My Wishlist</a></li>
+                <li class="list-group-item"><a href="{% url 'cart' %}">My Cart</a></li>
                 <li class="list-group-item"><a href="{% url 'wallet' %}">Wallet</a></li>
                 <li class="list-group-item"><a href="{% url 'logout_user' %}">Log Out</a></li>
             </ul>
